# v23-plugins

./: .gitignore  README.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
docs/plans/: 2026-04-10-placement-engine.md
docs/specs/: 2026-04-10-placement-engine-design.md
skills/comp-search/: SKILL.md
skills/comp-search/scripts/: export_comps.py  find_comps.py  merge_results.py  parse_comps.py
skills/deal-pack/: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
skills/deal-pack/deal_pack/: _money.py  cli.py  derived.py  inventory.py  models.py  rent_roll.py  sources.py  t12.py  writer.py
skills/deal-pack/tests/: conftest.py  test_cli.py  test_derived.py  test_inventory.py  test_models.py  test_rent_roll.py  test_sources.py  test_t12.py  test_writer.py
skills/deal-pack/tests/fixtures/integration/sample_deal/: rent_roll.csv  seller_om.txt  t12.csv
skills/deal-pack/tests/fixtures/rent_rolls/: office_standard.csv  vacant_units.csv
skills/deal-pack/tests/fixtures/t12s/: standard_office.csv
skills/linkedin-research/: .gitignore  README.md  SKILL.md
skills/linkedin-research/scripts/: package.json  scrape_screenshots.js
skills/placement-engine/: SKILL.md
skills/placement-engine/scripts/: db.py  export_xlsx.py  parse_xlsx.py  reconcile.py  requirements.txt
skills/placement-engine/scripts/tests/: conftest.py  test_db.py  test_export_xlsx.py  test_parse_xlsx.py  test_reconcile.py
